# VortiDeck

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/tauri-mobile/: nuxt.config.ts  package.json
apps/tauri-mobile/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-mobile/src-tauri/capabilities/: default.json  mobile.json
apps/tauri-mobile/src-tauri/src/: lib.rs
apps/tauri-windows/: app.vue  nuxt.config.ts  package.json
apps/tauri-windows/src-tauri/: Cargo.toml  diesel.toml  tauri.conf.json
apps/tauri-windows/src-tauri/capabilities/: default.json
apps/tauri-windows/src-tauri/resources/db/: vortideck.db
apps/tauri-windows/src-tauri/src/: create_websocket_mdns.rs  lib.rs  macros_state.rs  main.rs  main_new_temp.rs  shared_state.rs
apps/tauri-windows/src-tauri/src/commands/: discover_websocket.rs  generate_qr_code.rs  mod.rs  retrieve_peers.rs
apps/tauri-windows/src-tauri/src/db/: db.rs  mod.rs  models.rs  schema.rs  utils.rs
apps/tauri-windows/src-tauri/src/db/migrations/2024-12-23-230859_create_peers/: down.sql  up.sql
apps/tauri-windows/src-tauri/src/db/migrations/2024-12-24-140100_add_device_token_to_peers/: down.sql  up.sql
apps/web-app/: package.json
layers/base/: app.vue  nuxt.config.ts  package.json  tailwind.config.js  tsconfig.json
layers/base/assets/scss/: main.scss
layers/base/components/: WindowsTitlebar.vue
layers/base/components/Nav/: Bar.vue  Bottom.vue
layers/base/components/button/: Sidebar.vue  (+1 more)
layers/base/composables/: useConectionStatus.ts  useSendCommand.ts
layers/base/layouts/: main-app.vue  qr.vue
layers/base/pages/: index.vue  waiting-list.vue
layers/base/plugins/: socket.io.ts
layers/base/stores/: Connection.ts
layers/base/types/: Peer.ts
layers/desktop/: nuxt.config.ts  package.json  tsconfig.json
layers/desktop/components/: Navbar.vue  Sidebar.vue
layers/desktop/composables/: useComponentRegistry.ts
layers/desktop/layouts/: main-app.vue
layers/desktop/pages/: deck.vue  index.vue  pair.vue  premium.vue
layers/desktop/plugins/: GetTauriStateOnRefresh.ts  socket.io.txt
layers/desktop/stores/: desktopUtils.ts
layers/mobile/: nuxt.config.ts  package.json  tsconfig.json
layers/mobile/components/: NavBottom.vue
layers/mobile/layouts/: deck.vue  main-app.vue
layers/mobile/middleware/: layout.global.ts
layers/mobile/pages/: deck.vue  index.vue  qr.vue
layers/mobile/plugins/: GetTauriStateOnRefresh.ts
(+7 files in other folders)
