[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-websocket = "2"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
thiserror = "2.0.5"
futures-channel = "0.3.31"
futures-util = "0.3.31"
tauri-plugin-shell = "2.1.0"
tracing-journald = "=0.3.1"
local-ip-address = "0.6.3"
simple-dns = "0.7.1"
mdns-sd = "0.12.0"
zeroconf = "0.15.0"
env_logger = "0.11.5"


